syntax = "proto3";

package main;

option go_package = "./proto";

// 添加成长值变化历史记录表
message AddGrowthChangeHistoryReq {
  int32 change_count = 1; //积分改变数量
  int32 change_type = 2; //改变类型：0->增加；1->减少
  string operate_note = 3; //操作备注
  int32 source_type = 4; //积分来源：0->购物；1->管理员修改
  int64 member_id = 5; //会员id
  string operate_man = 6; //操作人员


}

message AddGrowthChangeHistoryResp {
  string pong = 1;
}

// 删除成长值变化历史记录表
message DeleteGrowthChangeHistoryReq {
  repeated int64 ids = 1;
}

message DeleteGrowthChangeHistoryResp {
  string pong = 1;
}

// 查询成长值变化历史记录表详情
message QueryGrowthChangeHistoryDetailReq {
    int64 id = 1;
}

message QueryGrowthChangeHistoryDetailResp {
  int32 change_count = 1; //积分改变数量
  int32 change_type = 2; //改变类型：0->增加；1->减少
  string create_time = 3; //创建时间
  int64 id = 4; //
  int64 member_id = 5; //会员id
  string operate_man = 6; //操作人员
  string operate_note = 7; //操作备注
  int32 source_type = 8; //积分来源：0->购物；1->管理员修改

}

// 分页查询成长值变化历史记录表列表
message QueryGrowthChangeHistoryListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 member_id = 3; //会员id

}

message GrowthChangeHistoryListData {
  int32 change_count = 1; //积分改变数量
  int32 change_type = 2; //改变类型：0->增加；1->减少
  string create_time = 3; //创建时间
  int64 id = 4; //
  int64 member_id = 5; //会员id
  string operate_man = 6; //操作人员
  string operate_note = 7; //操作备注
  int32 source_type = 8; //积分来源：0->购物；1->管理员修改

}

message QueryGrowthChangeHistoryListResp {
  int64 total = 1;
  repeated  GrowthChangeHistoryListData list = 2;
}

// 成长值变化历史记录表
service GrowthChangeHistoryService {
  // 添加成长值变化历史记录表
  rpc AddGrowthChangeHistory(AddGrowthChangeHistoryReq) returns (AddGrowthChangeHistoryResp){}
  // 删除成长值变化历史记录表
  rpc DeleteGrowthChangeHistory(DeleteGrowthChangeHistoryReq) returns (DeleteGrowthChangeHistoryResp){}
  // 查询成长值变化历史记录表详情
   rpc QueryGrowthChangeHistoryDetail(QueryGrowthChangeHistoryDetailReq) returns (QueryGrowthChangeHistoryDetailResp){}
  // 查询成长值变化历史记录表列表
  rpc QueryGrowthChangeHistoryList(QueryGrowthChangeHistoryListReq) returns (QueryGrowthChangeHistoryListResp){}


}
