syntax = "proto3";

package main;

option go_package = "./proto";


// 删除会员登录记录
message DeleteMemberLoginLogReq {
  repeated int64 ids = 1;
  int64 member_id = 2; //会员id
}

message DeleteMemberLoginLogResp {
  string pong = 1;
}



// 分页查询会员登录记录列表
message QueryMemberLoginLogListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int32 login_type = 3; //登录类型：0->PC；1->android;2->ios;3->小程序
  int64 member_id = 4; //会员id

}

message MemberLoginLogListData {
  string city = 1; //登录城市
  string create_time = 2; //登录时间
  int64 id = 3; //
  int32 login_type = 4; //登录类型：0->PC；1->android;2->ios;3->小程序
  int64 member_id = 5; //会员id
  string member_ip = 6; //登录ip
  string province = 7; //登录省份

}

message QueryMemberLoginLogListResp {
  int64 total = 1;
  repeated  MemberLoginLogListData list = 2;
}

// 会员登录记录
service MemberLoginLogService {
  // 删除会员登录记录
  rpc DeleteMemberLoginLog(DeleteMemberLoginLogReq) returns (DeleteMemberLoginLogResp){}
  // 查询会员登录记录列表
  rpc QueryMemberLoginLogList(QueryMemberLoginLogListReq) returns (QueryMemberLoginLogListResp){}


}
