syntax = "proto3";

package main;

option go_package = "./proto";

// 添加用户和标签关系表
message AddMemberMemberTagRelationReq {
  int64 member_id = 1; //会员id
  int64 tag_id = 2; //标签id

}

message AddMemberMemberTagRelationResp {
  string pong = 1;
}

// 删除用户和标签关系表
message DeleteMemberMemberTagRelationReq {
  repeated int64 ids = 1;
}

message DeleteMemberMemberTagRelationResp {
  string pong = 1;
}


// 分页查询用户和标签关系表列表
message QueryMemberMemberTagRelationListReq {
  int64 member_id = 2; //会员id
}

message MemberMemberTagRelationListData {
  int64 id = 1; //
  int64 member_id = 2; //会员id
  int64 tag_id = 3; //标签id

}

message QueryMemberMemberTagRelationListResp {
  int64 total = 1;
  repeated  MemberMemberTagRelationListData list = 2;
}

// 用户和标签关系表
service MemberMemberTagRelationService {
  // 添加用户和标签关系表
  rpc AddMemberMemberTagRelation(AddMemberMemberTagRelationReq) returns (AddMemberMemberTagRelationResp){}
  // 删除用户和标签关系表
  rpc DeleteMemberMemberTagRelation(DeleteMemberMemberTagRelationReq) returns (DeleteMemberMemberTagRelationResp){}
  // 查询用户和标签关系表列表
  rpc QueryMemberMemberTagRelationList(QueryMemberMemberTagRelationListReq) returns (QueryMemberMemberTagRelationListResp){}


}
