syntax = "proto3";

package main;

option go_package = "./proto";

// 添加用户标签表
message AddMemberTagReq {
  int64 finish_order_amount = 1; //自动打标签完成订单金额
  int32 finish_order_count = 2; //自动打标签完成订单数量
  int32 status = 3; //状态：0->禁用；1->启用
  string tag_name = 4; //标签名称

}

message AddMemberTagResp {
  string pong = 1;
}

// 删除用户标签表
message DeleteMemberTagReq {
  repeated int64 ids = 1;
}

message DeleteMemberTagResp {
  string pong = 1;
}

// 更新用户标签表
message UpdateMemberTagReq {
  int64 finish_order_amount = 1; //自动打标签完成订单金额
  int32 finish_order_count = 2; //自动打标签完成订单数量
  int64 id = 3; //
  int32 status = 4; //状态：0->禁用；1->启用
  string tag_name = 5; //标签名称

}

message UpdateMemberTagResp {
  string pong = 1;
}

// 更新用户标签表状态
message UpdateMemberTagStatusReq {
  repeated int64 ids = 1;
  int32 status = 4; //状态：0->禁用；1->启用

}

message UpdateMemberTagStatusResp {
  string pong = 1;
}

// 查询用户标签表详情
message QueryMemberTagDetailReq {
    int64 id = 1;
}

message QueryMemberTagDetailResp {
  int64 finish_order_amount = 1; //自动打标签完成订单金额
  int32 finish_order_count = 2; //自动打标签完成订单数量
  int64 id = 3; //
  int32 status = 4; //状态：0->禁用；1->启用
  string tag_name = 5; //标签名称

}

// 分页查询用户标签表列表
message QueryMemberTagListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int32 status = 4; //状态：0->禁用；1->启用
  string tag_name = 5; //标签名称

}

message MemberTagListData {
  int64 finish_order_amount = 1; //自动打标签完成订单金额
  int32 finish_order_count = 2; //自动打标签完成订单数量
  int64 id = 3; //
  int32 status = 4; //状态：0->禁用；1->启用
  string tag_name = 5; //标签名称

}

message QueryMemberTagListResp {
  int64 total = 1;
  repeated  MemberTagListData list = 2;
}

// 用户标签表
service MemberTagService {
  // 添加用户标签表
  rpc AddMemberTag(AddMemberTagReq) returns (AddMemberTagResp){}
  // 删除用户标签表
  rpc DeleteMemberTag(DeleteMemberTagReq) returns (DeleteMemberTagResp){}
  // 更新用户标签表
  rpc UpdateMemberTag(UpdateMemberTagReq) returns (UpdateMemberTagResp ){}
  // 更新用户标签表状态
  rpc UpdateMemberTagStatus(UpdateMemberTagStatusReq) returns (UpdateMemberTagStatusResp ){}
  // 查询用户标签表详情
   rpc QueryMemberTagDetail(QueryMemberTagDetailReq) returns (QueryMemberTagDetailResp){}
  // 查询用户标签表列表
  rpc QueryMemberTagList(QueryMemberTagListReq) returns (QueryMemberTagListResp){}


}
